# testing

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md  pyproject.toml  serving_requirements.txt
.github/workflows/: deploy-cicd.yml  mlops-bundle-cd-prod.yml  mlops-bundle-cd-staging.yml  mlops-bundle-ci.yml  mlops-run-tests.yml
dashboard/: app.py  constants.py  data.py  plots.py  styles.css  test.ipynb  ui.py
docs/: repo structure quick summary.md
evaluation_notebooks/: other_species_evaluation_report.ipynb
experiments/: birdnet-average-3s-chunk-embeddings-pooling-max.ipynb  birdnet-average-3s-chunk-embeddings.ipynb  embedding-tables-exp.ipynb  template.ipynb  template_notebook.ipynb
inference_notebooks/: audio_inference_pipeline.ipynb  serving_endpoint_query.ipynb
mlops/: databricks.yml  requirements.txt  test-requirements.txt
mlops/evaluation/: tf_model_evaluator.py
mlops/feature_engineering/: data_downloader.py  data_sampler.py  data_selector.py  preprocessor_audio_chunker.py  preprocessor_audio_databricks.py  preprocessor_audio_filter.py  preprocessor_audio_loader.py  preprocessor_extractor_birdnet.py  preprocessor_extractor_logmel.py  preprocessor_extractor_mfcc.py  preprocessor_feature_normalizer.py  preprocessor_orchestrator.py  registry_anchoring_strategies.py  registry_filtering_strategies.py
mlops/mlflow/: tracking.db
mlops/reporting/: output_generator.py
mlops/resources/: batch-inference-workflow-resource.yml  feature-engineering-workflow-resource.yml  ml-artifacts-resource.yml  model-workflow-resource.yml  monitoring-resource.yml
(+14 files in other folders)
